saltcorn/saltcorn-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\Github\k8s-yaml\saltcorn\kompose-windows-amd64.exe convert
    kompose.version: 1.26.0 (40646f47)
    traefik.enable: "true"
    traefik.http.routers.saltcorn-app.entrypoints: secure
    traefik.http.routers.saltcorn-app.rule: Host(`saltcorn.`)
    traefik.http.routers.saltcorn-app.tls.certresolver: leresolver
    traefik.http.services.saltcorn-app.loadbalancer.server.port: "3000"
  creationTimestamp: null
  labels:
    io.kompose.service: saltcorn-app
  name: saltcorn-app
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: saltcorn-app
status:
  loadBalancer: {}
